jumbotron desctop + jumbotron logo fix

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
     </div>
   </header>
   <main>
-    <section class="jumbotron">
+    <section id="jumbotron">
       <img class="jumbotron__background" alt="" src="img/hw-header-background.jpg"/>
       <div class="jumbotron__logo">
         <div class="jumbotron__logo-body">
