--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
         <nav class="header__menu">
           <ul class="header__list">
             <li>
-              <a href="#" class="header__link">About</a>
+              <a href="#about" class="header__link">About</a>
             </li>
             <li>
               <a href="#" class="header__link">Drivers</a>
@@ -52,6 +52,27 @@
         </div>
       </div>
       <img class="jumbotron__image" alt="" src="img/hw-header-car.png"/>
+    </section>
+    <section id="about">
+      <div class="about__view">
+        <img class="about__view-background" src="img/hw-about-background.jpg" alt="">
+        <h1 class="about__view-title">About</h1>
+        <div class="about__view-info">
+          <p>- 153 races</p>
+          <p>- 25 podiums</p>
+          <p>- 6 wins</p>
+        </div>
+      </div>
+      <div class="about__article">
+        <p>We are IT company that passioned about motorsport.
+          Teamwork, innovations, and modern approaches -
+          principles we are building our team around.</p>
+        <p>With the challenge of making racing cars faster,
+          lighter, and more reliable, Headworks Motosport was
+          born: the company that specializes in the development
+          of innovative methods and the production of high-quality
+          components that never existed before.</p>
+      </div>
     </section>
   </main>
 </body>
