--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,10 @@
           components that never existed before.</p>
       </div>
     </section>
+    <section id="drivers">
+      <h1 class="car__title">Drivers</h1>
+      <div id="drivers-container"></div>
+    </section>
     <section id="car">
       <h1 class="car__title">Car</h1>
       <div class="car__body">
