--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <div class="header__menu-background-mobile"></div>
+    <div class="header__menu-background_mobile"></div>
     <div class="header__body">
       <div class="header__left-container">
         <div class="header__burger">
@@ -76,11 +76,11 @@
       </div>
     </section>
     <section id="drivers">
-      <h1 class="car__title">Drivers</h1>
+      <h1>Drivers</h1>
       <div id="drivers-container"></div>
     </section>
     <section id="car">
-      <h1 class="car__title">Car</h1>
+      <h1>Car</h1>
       <div class="car__body">
         <ul class="car__summary">
           <li>Year: 2020</li>
